--- a/package.json
+++ b/package.json
@@ -18,18 +18,42 @@
     "preview": "rspack preview"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "allotment": "^1.20.3",
+    "lucide-react": "^0.488.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@rspack/cli": "^1.3.4",
-    "@rspack/core": "^1.3.4",
-    "@rspack/plugin-react-refresh": "^1.1.0",
-    "@types/react": "^19.1.0",
-    "@types/react-dom": "^19.1.1",
+    "@rspack/cli": "^1.3.5",
+    "@rspack/core": "^1.3.5",
+    "@rspack/plugin-react-refresh": "^1.2.1",
+    "@tailwindcss/postcss": "^4.1.4",
+    "@types/react": "^19.1.2",
+    "@types/react-dom": "^19.1.2",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "postcss": "^8.5.3",
+    "postcss-loader": "^8.1.1",
     "react-refresh": "^0.17.0",
+    "tailwind-merge": "^3.2.0",
+    "tailwindcss": "^4.1.4",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.3"
+    "typescript": "^5.8.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "react": "^19.1.0",
+      "react-dom": "^19.1.0"
+    }
+  },
+  "overrides": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
+  },
+  "resolutions": {
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0"
   }
 }
