--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-slot": "^1.2.0",
+    "@typescript/ata": "^0.9.7",
     "allotment": "^1.20.3",
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
