--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
     "node": ">=20"
   },
   "scripts": {
-    "build": "rspack build",
+    "build": "rsbuild build",
     "check": "biome check --write",
-    "dev": "rspack dev",
+    "dev": "rsbuild dev",
     "format": "biome format --write",
-    "preview": "rspack preview"
+    "preview": "rsbuild preview"
   },
   "dependencies": {
     "@monaco-editor/react": "^4.7.0",
@@ -29,20 +29,18 @@
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@rspack/cli": "^1.3.5",
-    "@rspack/core": "^1.3.5",
-    "@rspack/plugin-react-refresh": "^1.2.1",
+    "@rsbuild/core": "^1.3.8",
+    "@rsbuild/plugin-react": "^1.2.0",
     "@tailwindcss/postcss": "^4.1.4",
+    "@types/node": "^22.14.1",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
-    "react-refresh": "^0.17.0",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
-    "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   },
   "pnpm": {
