--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "preview": "rspack preview"
   },
   "dependencies": {
+    "@babel/standalone": "^7.27.0",
     "@monaco-editor/react": "^4.7.0",
     "@radix-ui/react-slot": "^1.2.0",
     "@typescript/ata": "^0.9.7",
     "allotment": "^1.20.3",
+    "lodash-es": "^4.17.21",
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
@@ -33,6 +35,8 @@
     "@rspack/core": "^1.3.5",
     "@rspack/plugin-react-refresh": "^1.2.1",
     "@tailwindcss/postcss": "^4.1.4",
+    "@types/babel__standalone": "^7.1.9",
+    "@types/lodash-es": "^4.17.12",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "class-variance-authority": "^0.7.1",
