--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@babel/standalone": "^7.27.0",
     "@monaco-editor/react": "^4.7.0",
+    "@radix-ui/react-alert-dialog": "^1.1.10",
     "@radix-ui/react-slot": "^1.2.0",
     "@typescript/ata": "^0.9.7",
     "allotment": "^1.20.3",
@@ -27,6 +28,7 @@
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "sonner": "^2.0.3",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
