--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@typescript/ata": "^0.9.7",
     "allotment": "^1.20.3",
+    "fflate": "^0.8.2",
+    "file-saver": "^2.0.5",
+    "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.488.0",
     "react": "^19.1.0",
@@ -38,6 +41,7 @@
     "@rspack/plugin-react-refresh": "^1.2.1",
     "@tailwindcss/postcss": "^4.1.4",
     "@types/babel__standalone": "^7.1.9",
+    "@types/file-saver": "^2.0.7",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
