--- a/package.json
+++ b/package.json
@@ -35,18 +35,25 @@
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.10",
+    "@babel/plugin-syntax-jsx": "^7.25.9",
+    "@babel/plugin-syntax-typescript": "^7.25.9",
     "@biomejs/biome": "^1.9.4",
     "@rspack/cli": "^1.3.5",
     "@rspack/core": "^1.3.5",
     "@rspack/plugin-react-refresh": "^1.2.1",
+    "@swc/helpers": "^0.5.17",
     "@tailwindcss/postcss": "^4.1.4",
     "@types/babel__standalone": "^7.1.9",
     "@types/file-saver": "^2.0.7",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "babel-loader": "^10.0.0",
+    "babel-plugin-react-compiler": "19.1.0-rc.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "compression-webpack-plugin": "^11.1.0",
     "postcss": "^8.5.3",
     "postcss-loader": "^8.1.1",
     "react-refresh": "^0.17.0",
