--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-mini-playground",
   "private": true,
   "version": "0.0.1",
+  "type": "module",
   "author": {
     "name": "jsonq",
     "email": "j996730508@163.com",
@@ -11,16 +12,17 @@
     "node": ">=20"
   },
   "scripts": {
-    "build": "rspack build",
+    "dev": "vite",
+    "build": "tsc -b && vite build",
+    "lint": "eslint .",
+    "preview": "vite preview",
     "check": "biome check --write",
-    "dev": "rspack dev",
-    "format": "biome format --write",
-    "preview": "rspack preview"
+    "format": "biome format --write"
   },
   "dependencies": {
-    "@babel/standalone": "^7.27.0",
+    "@babel/standalone": "^7.27.1",
     "@monaco-editor/react": "^4.7.0",
-    "@radix-ui/react-alert-dialog": "^1.1.10",
+    "@radix-ui/react-alert-dialog": "^1.1.11",
     "@radix-ui/react-slot": "^1.2.0",
     "@typescript/ata": "^0.9.7",
     "allotment": "^1.20.3",
@@ -28,40 +30,31 @@
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
-    "lucide-react": "^0.488.0",
+    "lucide-react": "^0.507.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "sonner": "^2.0.3",
     "tw-animate-css": "^1.2.5"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.10",
-    "@babel/plugin-syntax-jsx": "^7.25.9",
-    "@babel/plugin-syntax-typescript": "^7.25.9",
     "@biomejs/biome": "^1.9.4",
-    "@rspack/cli": "^1.3.5",
-    "@rspack/core": "^1.3.5",
-    "@rspack/plugin-react-refresh": "^1.2.1",
-    "@swc/helpers": "^0.5.17",
-    "@tailwindcss/postcss": "^4.1.4",
+    "@tailwindcss/postcss": "^4.1.5",
+    "@tailwindcss/vite": "^4.1.5",
     "@types/babel__standalone": "^7.1.9",
     "@types/file-saver": "^2.0.7",
     "@types/lodash-es": "^4.17.12",
     "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.2",
-    "babel-loader": "^10.0.0",
+    "@types/react-dom": "^19.1.3",
+    "@vitejs/plugin-react-swc": "^3.9.0",
     "babel-plugin-react-compiler": "19.1.0-rc.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "compression-webpack-plugin": "^11.1.0",
-    "postcss": "^8.5.3",
-    "postcss-loader": "^8.1.1",
-    "react-refresh": "^0.17.0",
     "tailwind-merge": "^3.2.0",
     "tailwind-scrollbar": "^4.0.2",
-    "tailwindcss": "^4.1.4",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.8.3"
+    "tailwindcss": "^4.1.5",
+    "typescript": "^5.8.3",
+    "vite": "^6.3.5"
   },
   "pnpm": {
     "overrides": {
