--- a/package.json
+++ b/package.json
@@ -49,12 +49,12 @@
     "babel-plugin-react-compiler": "19.1.0-rc.1",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "compression-webpack-plugin": "^11.1.0",
     "tailwind-merge": "^3.2.0",
     "tailwind-scrollbar": "^4.0.2",
     "tailwindcss": "^4.1.5",
     "typescript": "^5.8.3",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "vite-plugin-compression2": "^1.3.3"
   },
   "pnpm": {
     "overrides": {
