--- a/package.json
+++ b/package.json
@@ -20,41 +20,41 @@
     "format": "biome format --write"
   },
   "dependencies": {
-    "@babel/standalone": "^7.27.1",
+    "@babel/standalone": "^7.28.4",
     "@monaco-editor/react": "^4.7.0",
-    "@radix-ui/react-alert-dialog": "^1.1.11",
-    "@radix-ui/react-slot": "^1.2.0",
-    "@typescript/ata": "^0.9.7",
-    "allotment": "^1.20.3",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@typescript/ata": "^0.9.8",
+    "allotment": "^1.20.4",
     "fflate": "^0.8.2",
     "file-saver": "^2.0.5",
     "jszip": "^3.10.1",
     "lodash-es": "^4.17.21",
     "lucide-react": "^0.507.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "sonner": "^2.0.3",
-    "tw-animate-css": "^1.2.5"
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "sonner": "^2.0.7",
+    "tw-animate-css": "^1.3.8"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.9.4",
-    "@tailwindcss/postcss": "^4.1.5",
-    "@tailwindcss/vite": "^4.1.5",
+    "@tailwindcss/postcss": "^4.1.13",
+    "@tailwindcss/vite": "^4.1.13",
     "@types/babel__standalone": "^7.1.9",
     "@types/file-saver": "^2.0.7",
     "@types/lodash-es": "^4.17.12",
-    "@types/react": "^19.1.2",
-    "@types/react-dom": "^19.1.3",
-    "@vitejs/plugin-react": "^4.4.1",
-    "babel-plugin-react-compiler": "19.1.0-rc.1",
+    "@types/react": "^19.1.12",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^4.7.0",
+    "babel-plugin-react-compiler": "19.1.0-rc.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^3.2.0",
+    "tailwind-merge": "^3.3.1",
     "tailwind-scrollbar": "^4.0.2",
-    "tailwindcss": "^4.1.5",
-    "typescript": "^5.8.3",
-    "vite": "^6.3.5",
-    "vite-plugin-compression2": "^1.3.3"
+    "tailwindcss": "^4.1.13",
+    "typescript": "^5.9.2",
+    "vite": "npm:rolldown-vite@latest",
+    "vite-plugin-compression2": "^1.4.0"
   },
   "pnpm": {
     "overrides": {
