--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "format": "biome format --write"
+    "format": "biome check --write ."
   },
   "dependencies": {
     "@babel/standalone": "^7.28.4",
@@ -36,12 +36,13 @@
     "tw-animate-css": "^1.3.8"
   },
   "devDependencies": {
-    "@biomejs/biome": "^1.9.4",
+    "@biomejs/biome": "^2.2.3",
     "@tailwindcss/postcss": "^4.1.13",
     "@tailwindcss/vite": "^4.1.13",
     "@types/babel__standalone": "^7.1.9",
     "@types/file-saver": "^2.0.7",
     "@types/lodash-es": "^4.17.12",
+    "@types/node": "^24.3.1",
     "@types/react": "^19.1.12",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.2",
